test/valid/functions.anf
mod functions {
    def test1(a, b) {
        return(a)
    }
    def test2(x) { test3(x) }
    def test3(y, z) {
        test1(z)
        y
    }
}
