test/invalid/functions.anf
mod functions {
    def f() = g()
    def g() = h()
    def h() = f()
}
